--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon --exec babel-node app.js --delay 2"
+    "start": "nodemon --exec babel-node init.js --delay 2"
   },
   "author": "",
   "license": "ISC",
